--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -441,6 +441,143 @@
                 "plt.tight_layout()\n",
                 "plt.show()"
             ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "- **Graficos Multivariables**\n",
+                "\n",
+                "    - `biopsy-cancer` -> Confirmamos que todos los casos de pacientes con cáncer han recibido una biopsia.\n",
+                "\n",
+                "    - `invasive-cancer` -> Vemos que la mayoria de casos de cáncer detectados han sido canceres invasivos.\n",
+                "\n",
+                "    - `implant-cancer` -> Confirmamos que no hay relación alguna entre implante y que la paciente tenga cancer.\n",
+                "\n",
+                "    - `laterality-cancer` -> Vemos que no hay una tendencia en el seno donde se desarrolla el cancer.\n",
+                "\n",
+                "    - `difficult_negative_case-cancer` -> Vemos que no hay relación entre lo dificil que sea el caso en ser interpretado con que la paciente tenga cancer.\n",
+                "\n",
+                "    - `view-cancer` -> Como era de esperar la proyección de la mamografia no afecta en que la paciente tenga o no cancer.\n",
+                "\n",
+                "    - `density-cancer` -> Vemos que en proporcion con su total C y D tienen más cantidad de pacientes con cancer.\n",
+                "\n",
+                "    - `BIRADS-cancer` -> Confirmamos que el campo 0 es el que posee todo el flujo de pacientes con cancer, por lo que en la escala real de BI-RADS sería el 6.\n",
+                "\n",
+                "    - `age-cancer` -> Confirmamos una relación directa entre edad y cancer, a más edad más posibilidad de que la paciente tenga cancer.\n",
+                "\n",
+                "\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "**Limpieza de datos**\n",
+                "\n",
+                "Una vez hecho un analisis principal del dataset y sus relaciones vamos a proceder a eliminar datos innecesarios y a gestionar los NaNs."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 139,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Dataset dimensions: (54668, 14)\n",
+                        "\n",
+                        "Image view:\n",
+                        "==========\n",
+                        "MLO    27903\n",
+                        "CC     26765\n",
+                        "==========\n",
+                        "\n",
+                        "Deleting non relevant data...\n",
+                        "...Data deleted\n",
+                        "\n",
+                        "Image view:\n",
+                        "==========\n",
+                        "MLO    27903\n",
+                        "CC     26765\n",
+                        "==========\n",
+                        "\n",
+                        "Final dataset dimensions: (54668, 14)\n"
+                    ]
+                }
+            ],
+            "source": [
+                "#El primer paso será visualizar la columna view para ver cuantos datos hay que no sean de los dos planos principales.\n",
+                "\n",
+                "def ViewAnalisis(dataset, col= \"view\"):\n",
+                "    #Antes de empezar a trabajar el Dataset vamos a imprimir sus dimensiones.\n",
+                "    print(f\"Dataset dimensions: {dataset.shape}\\n\")\n",
+                "\n",
+                "    #Vamos a visualizar cuantos valores tiene cada una de las proyecciones\n",
+                "    print (f\"Image view:\\n==========\\n{dataset[col].value_counts().to_string(header=False)}\\n==========\\n\")\n",
+                "\n",
+                "    #Una vez hemos visto la cantidad que tiene cada proyección vamos a quedarnos solamente con MLO y CC.\n",
+                "    print(\"Deleting non relevant data...\")\n",
+                "    try:\n",
+                "        dataset = dataset[dataset[\"view\"].isin([\"MLO\",\"CC\"])]\n",
+                "        print(\"...Data deleted\\n\")\n",
+                "        print (f\"Image view:\\n==========\\n{dataset[col].value_counts().to_string(header=False)}\\n==========\\n\")\n",
+                "    except Exception as e:\n",
+                "        print(f\"...Error: {e}\")\n",
+                "    \n",
+                "    print(f\"Final dataset dimensions: {dataset.shape}\")\n",
+                "    return dataset\n",
+                "\n",
+                "\n",
+                "dataTrain = ViewAnalisis(dataTrain)\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Ahora ya tenemos todas las filas que utilizaremos en el modelo final, así que procederemos a eliminar las columnas que no vamos a utilizar."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 158,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Dataset Dimensions: (54668, 14)\n",
+                        "\n",
+                        "Deleting columns: site_id, machine_id, difficult_negative_case...\n",
+                        "...columns deleted.\n",
+                        "\n",
+                        "Final data dimensions: (54668, 11)\n"
+                    ]
+                }
+            ],
+            "source": [
+                "deleter_cols = [\"site_id\",\"machine_id\",\"difficult_negative_case\"]\n",
+                "\n",
+                "def DataEraser(dataset, cols):\n",
+                "    #Primero visualizamos las dimensiones.\n",
+                "    print(f\"Dataset Dimensions: {dataset.shape}\\n\")\n",
+                "\n",
+                "    print(f\"Deleting columns: {', '.join(cols)}...\")\n",
+                "    try:\n",
+                "        erased_data = dataset.drop(columns=cols)\n",
+                "        print(f\"...columns deleted.\\n\")\n",
+                "    except Exception as e:\n",
+                "        print(f\"...Error: {e}\\n\")\n",
+                "    \n",
+                "    print(f\"Final data dimensions: {erased_data.shape}\")\n",
+                "    return erased_data\n",
+                "\n",
+                "erasedDataTrain = DataEraser(dataTrain, deleter_cols)"
+            ]
         }
     ],
     "metadata": {
