--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -70,12 +70,50 @@
     "    try:\n",
     "        data = pd.read_csv(\"../data/processed/clean_data.csv\")\n",
     "        print(f\"{data.head(5)}\\n\\n · Successfully data readed\")\n",
+    "        return data\n",
     "    except Exception as e:\n",
     "        print(f\"...Failed data readed. Error: {e}\")\n",
-    "    \n",
-    "    return data\n",
+    "        return None\n",
     "\n",
     "data = ReadData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetPaths(root, dataset):\n",
+    "\n",
+    "    #Creamos una lista con el Path de las imagenes.\n",
+    "\n",
+    "    root = Path(root) # conversion Str -> Path\n",
+    "    list_path = list(root.rglob(\"*.dcm\")) # lista de paths\n",
+    "\n",
+    "    #Mapeamos\n",
+    "    map_label = {}\n",
+    "\n",
+    "    for p in list_path:\n",
+    "        patient_id = p.parts[-2] # -> folder del paciente donde están las imagenes.\n",
+    "        img_id = p.stem # -> la imagen en cuestion.\n",
+    "\n",
+    "        try:    \n",
+    "            filter = dataset[(dataset[\"patient_id\"].astype(str) == patient_id) & (dataset[\"image_id\"].astype(str) == img_id)] #Importante convertir los valores del dataset en str para la comparacion.\n",
+    "\n",
+    "            if not filter.empty:\n",
+    "                target = int(filter[\"cancer\"].values[0]) # -> tomamos el valor del target.\n",
+    "                map_label[p] = target\n",
+    "            else:\n",
+    "                print(\"No coincidences in dataset.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error: {e} in row {p}.\")\n",
+    "\n",
+    "    return map_label\n",
+    "\n",
+    "\n",
+    "\n",
+    "mappingIMG = GetPaths(IMGFOLDER_PATH, data)"
    ]
   }
  ],
