--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Librerias\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "import pydicom\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +45,10 @@
      "text": [
       "Reading Dataset...\n",
       "==========\n",
+      "\n",
+      "Dataset dimensions: (54668, 11)\n",
+      "\n",
+      "Data Preview:\n",
       "\n",
       "   patient_id    image_id   age  cancer  biopsy  invasive  BIRADS  implant  \\\n",
       "0       10006   462822612  61.0       0       0         0     4.0        0   \n",
@@ -69,7 +74,7 @@
     "\n",
     "    try:\n",
     "        data = pd.read_csv(\"../data/processed/clean_data.csv\")\n",
-    "        print(f\"{data.head(5)}\\n\\n · Successfully data readed\")\n",
+    "        print(f\"Dataset dimensions: {data.shape}\\n\\nData Preview:\\n\\n{data.head(5)}\\n\\n · Successfully data readed\")\n",
     "        return data\n",
     "    except Exception as e:\n",
     "        print(f\"...Failed data readed. Error: {e}\")\n",
