--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Librerias\n",
+    "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\"\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,6 +121,132 @@
     "\n",
     "\n",
     "mappingIMG = GetPaths(IMGFOLDER_PATH, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Primero vamos a crear una pequeña funcion para normalizar el tamaño de las imagenes.\n",
+    "\n",
+    "def NormalizeIMG(img):\n",
+    "    \n",
+    "    max_val = np.max(img)\n",
+    "    img = img.astype(np.float32)\n",
+    "\n",
+    "    if max_val > 0:\n",
+    "        img = img / max_val\n",
+    "\n",
+    "    #Vamos a hacer una verificación adicional para convertir las imagenes en escala de grises a RGB si fuese necesario.\n",
+    "    \n",
+    "    if img.ndim == 2: #Escala de grises -> 1 dimension + canal\n",
+    "        img = np.stack([img] * 3, axis=-1)\n",
+    "\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Cargamos las imagenes.\n",
+    "def ImgLoader(path):\n",
+    "\n",
+    "    #Convertimos los paths de tf.str a str normal porque si no falla.\n",
+    "    try:\n",
+    "        str_path = path.numpy().decode(\"utf-8\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "    #Cargamos imgs dicom\n",
+    "    dcm = pydicom.dcmread(str_path)\n",
+    "    img = dcm.pixel_array.astype(np.float32)\n",
+    "\n",
+    "    #Normalizamos el tamaño de las imagenes\n",
+    "    img = NormalizeIMG(img)\n",
+    "    img = tf.image.resize(img, [224,224]) #Redimensionamos a 244x244\n",
+    "\n",
+    "    #Convertimos la img a tensor\n",
+    "\n",
+    "    img_tensor = tf.convert_to_tensor(img)\n",
+    "\n",
+    "    return img_tensor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lo convertimos en tensores\n",
+    "def ImgToTensor(path, label):\n",
+    "    img = tf.py_function(func=ImgLoader, inp=[path], Tout=tf.float32)\n",
+    "    img.set_shape([224, 224, 3]) #Seteamos la imagen a 3 canales\n",
+    "    return img, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def TensorMaker(datalabels):\n",
+    "\n",
+    "    #Convertimos el diccionario en listas separando key y value.\n",
+    "    paths = list(datalabels.keys())\n",
+    "    labels = list(datalabels.values())\n",
+    "\n",
+    "    #convertimos las listas en tensores.\n",
+    "    path_list = []\n",
+    "    label_list = []\n",
+    "\n",
+    "    for p, l in zip(paths, labels):\n",
+    "        path_list.append(str(p)) #Path -> str\n",
+    "        label_list.append(l)\n",
+    "\n",
+    "    tensor_paths = tf.constant(path_list)\n",
+    "    tensor_labels = tf.constant(label_list, dtype=tf.int32)\n",
+    "\n",
+    "    #Crearmos el dataframe con los tensores.\n",
+    "    data_tensor = tf.data.Dataset.from_tensor_slices((tensor_paths, tensor_labels))\n",
+    "\n",
+    "    data_tensor = data_tensor.map(ImgToTensor, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "\n",
+    "    #Aplicamos el batching y el prefetching\n",
+    "    data_tensor = data_tensor.batch(32).prefetch(tf.data.AUTOTUNE)\n",
+    "\n",
+    "    return data_tensor\n",
+    "\n",
+    "dataTensor = TensorMaker(mappingIMG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image shape: (32, 224, 224, 3)\n",
+      "Label batch shape: (32,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Vamos a comprobar que se haya creado bien el dataset.\n",
+    "\n",
+    "for img, label in dataTensor.take(1):\n",
+    "    print(f\"Image shape: {img.shape}\")\n",
+    "    print(f\"Label batch shape: {label.shape}\")"
    ]
   }
  ],
