--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,9 @@
     "import tensorflow as tf\n",
     "import pydicom\n",
     "from pathlib import Path\n",
+    "\n",
+    "from tensorflow.keras.applications import ResNet50V2\n",
+    "from tensorflow.keras import layers, models\n",
     "\n",
     "#Constantes\n",
     "IMGFOLDER_PATH = \"../data/raw/train_images\"\n"
@@ -83,6 +86,13 @@
     "        return None\n",
     "\n",
     "data = ReadData()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Piperline para convertir las imagenes en tensores**"
    ]
   },
   {
@@ -247,6 +257,51 @@
     "for img, label in dataTensor.take(1):\n",
     "    print(f\"Image shape: {img.shape}\")\n",
     "    print(f\"Label batch shape: {label.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Creando el modelo**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50v2_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "\u001b[1m94668760/94668760\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ModelCreator():\n",
+    "    #Cargamos ResNet50V2 preentrenado\n",
+    "    prefit_model = ResNet50V2(weights=\"imagenet\", include_top=False, input_shape=(244,244,3))\n",
+    "\n",
+    "    #Congelamos los pesos del modelo preentrenado\n",
+    "    prefit_model.trainable = False\n",
+    "\n",
+    "    #Añadimos las capas densas adicionales\n",
+    "    final_model = models.Sequential([\n",
+    "        prefit_model,\n",
+    "        layers.GlobalAveragePooling2D(), # -> Reducimos las dimensiones a 2D\n",
+    "        layers.Dense(128, activation=\"relu\"), # -> Capa densa\n",
+    "        layers.Dropout(0.5), # -> Capa de regularización\n",
+    "        layers.Dense(1, activation=\"sigmoid\") #Capa de salida\n",
+    "    ])\n",
+    "\n",
+    "    final_model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+    "\n",
+    "    return final_model\n",
+    "\n",
+    "model = ModelCreator()"
    ]
   }
  ],
