--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,17 @@
     "\n",
     "from tensorflow.keras.applications import ResNet50V2\n",
     "from tensorflow.keras import layers, models\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "\n",
     "#Constantes\n",
     "IMGFOLDER_PATH = \"../data/raw/train_images\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Cargamos los datos**"
    ]
   },
   {
@@ -260,6 +268,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Una vez tenemos el Dataset convertido en tensores vamos a separarlo en train y val\n",
+    "\n",
+    "def SplitData(dataset):\n",
+    "    total_size = len(dataset)\n",
+    "    val_size = int(total_size * 0.2) #validacion del 20%\n",
+    "\n",
+    "    data_train = dataset.skip(val_size)\n",
+    "    data_val = dataset.take(val_size)\n",
+    "\n",
+    "    return data_train, data_val\n",
+    "\n",
+    "dataTensorTrain, dataTensorVal = SplitData(dataTensor)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,22 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50v2_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "\u001b[1m94668760/94668760\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def ModelCreator():\n",
     "    #Cargamos ResNet50V2 preentrenado\n",
-    "    prefit_model = ResNet50V2(weights=\"imagenet\", include_top=False, input_shape=(244,244,3))\n",
+    "    prefit_model = ResNet50V2(weights=\"imagenet\", include_top=False, input_shape=(224,224,3))\n",
     "\n",
     "    #Congelamos los pesos del modelo preentrenado\n",
     "    prefit_model.trainable = False\n",
@@ -302,6 +321,100 @@
     "    return final_model\n",
     "\n",
     "model = ModelCreator()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Entrenando al modelo**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 23s/step - accuracy: 0.9692 - loss: 0.2301 \n",
+      "Epoch 1: val_loss improved from inf to 0.14585, saving model to ../models/best_model.h5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1311s\u001b[0m 28s/step - accuracy: 0.9693 - loss: 0.2294 - val_accuracy: 0.9688 - val_loss: 0.1459\n",
+      "Epoch 2/20\n",
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 22s/step - accuracy: 0.9828 - loss: 0.0990 \n",
+      "Epoch 2: val_loss improved from 0.14585 to 0.12871, saving model to ../models/best_model.h5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1307s\u001b[0m 28s/step - accuracy: 0.9827 - loss: 0.0994 - val_accuracy: 0.9688 - val_loss: 0.1287\n",
+      "Epoch 3/20\n",
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 31s/step - accuracy: 0.9828 - loss: 0.0801 \n",
+      "Epoch 3: val_loss improved from 0.12871 to 0.12331, saving model to ../models/best_model.h5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1780s\u001b[0m 37s/step - accuracy: 0.9827 - loss: 0.0806 - val_accuracy: 0.9688 - val_loss: 0.1233\n",
+      "Epoch 4/20\n",
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 22s/step - accuracy: 0.9828 - loss: 0.0765 \n",
+      "Epoch 4: val_loss did not improve from 0.12331\n",
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1245s\u001b[0m 27s/step - accuracy: 0.9827 - loss: 0.0770 - val_accuracy: 0.9688 - val_loss: 0.1302\n",
+      "Epoch 5/20\n",
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 21s/step - accuracy: 0.9844 - loss: 0.0724 \n",
+      "Epoch 5: val_loss did not improve from 0.12331\n",
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1234s\u001b[0m 27s/step - accuracy: 0.9843 - loss: 0.0727 - val_accuracy: 0.9688 - val_loss: 0.1321\n",
+      "Epoch 6/20\n",
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 21s/step - accuracy: 0.9824 - loss: 0.0696 \n",
+      "Epoch 6: val_loss did not improve from 0.12331\n",
+      "\u001b[1m39/39\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1234s\u001b[0m 27s/step - accuracy: 0.9823 - loss: 0.0699 - val_accuracy: 0.9688 - val_loss: 0.1386\n",
+      "Epoch 6: early stopping\n",
+      "Restoring model weights from the end of the best epoch: 3.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Definimos los callbacks\n",
+    "\n",
+    "checkpoint = ModelCheckpoint(filepath=\"../models/best_model.h5\", monitor=\"val_loss\", save_best_only=True, save_weights_only=False, mode=\"min\", verbose=1)\n",
+    "early_stop = EarlyStopping(monitor=\"val_loss\", patience=3, restore_best_weights=True, mode=\"min\", verbose=1)\n",
+    "\n",
+    "#Empezamos el entrenamiento\n",
+    "hist = model.fit(dataTensorTrain, validation_data=dataTensorVal, epochs=20, callbacks=[checkpoint, early_stop])"
    ]
   }
  ],
